[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Class/SpinBoxControlClass.gd" type="Script" id=1]
[ext_resource path="res://Script/Others/Vector.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Vector" type="VBoxContainer"]
anchor_right = 0.13125
anchor_bottom = 0.125
size_flags_horizontal = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="X" type="HBoxContainer" parent="."]
margin_right = 168.0
margin_bottom = 28.0

[node name="x" type="Label" parent="X"]
margin_right = 20.0
margin_bottom = 28.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.65098, 0.65098, 1 )
custom_styles/normal = SubResource( 1 )
text = "X"
align = 1
valign = 1

[node name="X" type="SpinBox" parent="X"]
margin_left = 23.0
margin_right = 168.616
margin_bottom = 28.096
min_value = -999.0
max_value = 999.0
step = 0.1
script = ExtResource( 1 )

[node name="Y" type="HBoxContainer" parent="."]
margin_top = 31.0
margin_right = 168.0
margin_bottom = 59.0

[node name="y" type="Label" parent="Y"]
margin_right = 20.0
margin_bottom = 28.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.745098, 1, 0.65098, 1 )
custom_styles/normal = SubResource( 1 )
text = "Y"
align = 1
valign = 1

[node name="Y" type="SpinBox" parent="Y"]
margin_left = 23.0
margin_right = 168.616
margin_bottom = 28.096
min_value = -999.0
max_value = 999.0
step = 0.1
script = ExtResource( 1 )

[node name="Z" type="HBoxContainer" parent="."]
margin_top = 62.0
margin_right = 168.0
margin_bottom = 90.0

[node name="z" type="Label" parent="Z"]
margin_right = 20.0
margin_bottom = 28.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.65098, 0.733333, 1, 1 )
custom_styles/normal = SubResource( 1 )
text = "Z"
align = 1
valign = 1

[node name="Z" type="SpinBox" parent="Z"]
margin_left = 23.0
margin_right = 168.616
margin_bottom = 28.096
min_value = -999.0
max_value = 999.0
step = 0.1
script = ExtResource( 1 )

[connection signal="value_changed" from="X/X" to="." method="_on_X_value_changed"]
[connection signal="value_changed" from="Y/Y" to="." method="_on_Y_value_changed"]
[connection signal="value_changed" from="Z/Z" to="." method="_on_Z_value_changed"]
